<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="welcome_Slogan_MainActivity">Welcome to Tour Guide App</string>
    <string name="title_MainActivity">This Screen will show different categories which will guide you through the App.</string>
    <string name="title_EventActivity">This Screen will show list of all the events that happen in Jalandhar City.</string>
    <string name="title_HotelsActivity">This Screen will show list of all the Hotels available in Jalandhar City.</string>
    <string name="title_ParksActivity">This Screen will show list of all the Parks available in Jalandhar City.</string>
    <string name="title_ReligiousPlacesActivity">This Screen will show list of all the Religious Places in Jalandhar City.</string>
    <string name="title_RestaurentsActivity">This Screen will show list of all the Restaurents in Jalandhar City.</string>
    <string name="title_StadiumsActivity">This Screen will show list of all the Stadiums in Jalandhar City.</string>
    <string name="title_DetailsActivity">This Screen will show Details of selected item.</string>
    <string name="na_TextView_DetailsActivity">NA</string>
    <string name="category_TextView_MainActivity">Categories</string>
    <string name="choose_Category_TextView_MainActivity">Choose your Category</string>
    <string name="hotels_TextView_MainActivity">Hotels</string>
    <string name="parks_TextView_MainActivity">Parks</string>
    <string name="religious_places_TextView_MainActivity">Religious Places</string>
    <string name="restaurents_TextView_MainActivity">Restaurents</string>
    <string name="stadiums_TextView_MainActivity">Stadiums</string>
    <string name="events_TextView_MainActivity">Events</string>
    <string name="ImageView_ContentDescription">ImageView</string>
    <string name="TextView_DefaultText">TextView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cheap_hotel_tab">Cheap</string>
    <string name="mid_hotel_tab">Mid Price</string>
    <string name="expensive_hotel_tab">Expensive</string>
    <string name="veg_rest_tab">Veg</string>
    <string name="non_veg_rest_tab">Non-Veg</string>
    <string name="name_event_1">AUSTRALIA EDUCATION FAIR</string>
    <string name="venue_event_1">Country Inn and Suites</string>
    <string name="description_event_1">This event provide an opportunity to promote the brand through extensive publicity, create an opportunity for students to choose from different programs, provide an opportunity for students to enroll for under graduate, post graduate and research programs in USA and other countries and more etc. </string>
    <string name="phone_event_1">0181 597 3333</string>
    <string name="timing_event_1">11:00 AM to 4:00 PM</string>
    <string name="date_event_1">22nd January 2018</string>
    <string name="name_event_2">UK EDUCATION FAIR</string>
    <string name="venue_event_2">Hotel President</string>
    <string name="description_event_2">This event provide an opportunity to promote the brand through extensive publicity, create an opportunity for students to choose from different programs, provide an opportunity for students to enroll for under graduate, post graduate and research programs in USA and other countries and more etc. </string>
    <string name="phone_event_2">0181 597 7777</string>
    <string name="timing_event_2">12:00 AM to 2:00 PM</string>
    <string name="date_event_2">26nd January 2018</string>
    <string name="name_event_3">New Zealand EDUCATION FAIR</string>
    <string name="venue_event_3">Hotel Ramada</string>
    <string name="description_event_3">This event provide an opportunity to promote the brand through extensive publicity, create an opportunity for students to choose from different programs, provide an opportunity for students to enroll for under graduate, post graduate and research programs in USA and other countries and more etc. </string>
    <string name="phone_event_3">0181 222 3333</string>
    <string name="timing_event_3">01:00 PM to 4:00 PM</string>
    <string name="date_event_3">10nd January 2018</string>
    <string name="name_event_4">Poland EDUCATION FAIR</string>
    <string name="venue_event_4">Country Inn and Suites</string>
    <string name="description_event_4">This event provide an opportunity to promote the brand through extensive publicity, create an opportunity for students to choose from different programs, provide an opportunity for students to enroll for under graduate, post graduate and research programs in USA and other countries and more etc. </string>
    <string name="phone_event_4">0181 597 3333</string>
    <string name="timing_event_4">02:00 PM to 05:00 PM</string>
    <string name="date_event_4">05nd January 2018</string>
    <string name="name_event_5">USA EDUCATION FAIR</string>
    <string name="venue_event_5">Hotel Sarovar Portico</string>
    <string name="description_event_5">This event provide an opportunity to promote the brand through extensive publicity, create an opportunity for students to choose from different programs, provide an opportunity for students to enroll for under graduate, post graduate and research programs in USA and other countries and more etc. </string>
    <string name="phone_event_5">0181 566 6666</string>
    <string name="timing_event_5">11:30 AM to 4:00 PM</string>
    <string name="date_event_5">31nd January 2018</string>
    <string name="name_hotel_1">Best Western</string>
    <string name="address_hotel_1">GT Road , Near BSF Chowk, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_1">This modern hotel on the edge of downtown is 1.6 km from Khalsa College Halt railway station and 4.7 km from the Shri Devi Talab Mandir temple.
Featuring free Wi-Fi, the straightforward rooms and suites also come with flat-screen TVs and minifridges. Room service is available 24x7.
This hotel offers such amenities as a restaurant, a bar, a fitness room and a spa with Ayurvedic treatments.</string>
    <string name="costCategory_hotel_1">Cheap</string>
    <string name="phone_hotel_1">0181 503 2000</string>
    <string name="stars_hotel_1">3-star hotel</string>
    <string name="price_hotel_1">Rs.2100</string>
    <string name="name_hotel_2">Radisson Jalandhar</string>
    <string name="address_hotel_2">BMC Chowk, GT Road, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_2">Set 2.1 km from Jalandhar City railway station, this upscale hotel in a grand, white-painted building is 3.3 km from the Devi Talab Mandir temple.
Warm, classic rooms have dark wood furnishing and offer free Wi-Fi, flat-screen TVs and minibars, as well as tea and coffeemaking equipment. Upgraded rooms add traditional, English-style furnishings, while club rooms offer free breakfast and drinks. Suites include sitting areas. Room service is available 24x7.
        Dining options include a casual 24-hour restaurant, a refined Asian eatery and a kebab spot, plus a sports bar and a pastry shop. There also a fitness centre, a sauna and an outdoor pool.</string>
    <string name="costCategory_hotel_2">Expensive</string>
    <string name="phone_hotel_2">0181 467 1234</string>
    <string name="stars_hotel_2">5-star hotel</string>
    <string name="price_hotel_2">Rs.6200</string>
    <string name="name_hotel_3">Ramada Jalandhar City Centre</string>
    <string name="address_hotel_3">Nam Dev Chowk G.T. Road, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_3">This unassuming, city centre hotel is 2 km from Jalandhar City train station and 2.3 km from Shri Devi Talab Mandir temple.
Featuring complimentary Wi-Fi, the relaxed rooms and suites also offer flat-screen TVs, minifridges, desks and safes. Suites add sitting areas. Room service is available, and kids age 17 and under stay free with an adult.</string>
    <string name="costCategory_hotel_3">Expensive</string>
    <string name="phone_hotel_3">0181 439 0000</string>
    <string name="stars_hotel_3">5-star hotel</string>
    <string name="price_hotel_3">Rs.5000</string>
    <string name="name_hotel_4">The Maya Hotel</string>
    <string name="address_hotel_4">EH-178, Opposite District Session Court, Near BMC  Namdhari Shaheed Singh Chowk, G T Road, Civil Lines, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_4">In a glass-fronted building, this upscale hotel with a grand lobby is 1.8 km from Jalandhar City railway station and 3.1 km from Devi Talab Mandir, a Hindu temple.
Featuring wood floors and furnishings, the laid-back rooms and suites come with free Wi-Fi, flat-screen TVs, and tea and coffeemaking facilities. Some have 4-poster beds, while suites offer living rooms.</string>
    <string name="costCategory_hotel_4">Mid Price</string>
    <string name="phone_hotel_4">0181 468 8700</string>
    <string name="stars_hotel_4">4-star hotel</string>
    <string name="price_hotel_4">Rs.3200</string>
    <string name="name_hotel_5">Sarovar Portico</string>
    <string name="address_hotel_5">Near BSF Chowk, GT Road, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_5">This upscale hotel in a commercial/industrial area is 1 km from Lyallpur Khalsa College Halt Jalandhar train station and 8 km from the estimated 200-year-old Devi Talab Temple.
The warm rooms with a polished vibe have free Wi-Fi, flat-screen TVs and minifridges, as well as tea and coffeemakers, turndown service and en suite bathrooms with glass-enclosed showers. Suites add separate living areas. Room service is offered 24x7.</string>
    <string name="costCategory_hotel_5">Mid Price</string>
    <string name="phone_hotel_5">0181 517 8000</string>
    <string name="stars_hotel_5">4-star hotel</string>
    <string name="price_hotel_5">Rs.4100</string>
    <string name="name_hotel_6">Hotel Dolphin</string>
    <string name="address_hotel_6">Old GT Road, Near Patel Chowk, Jalandhar, Punjab 144004</string>
    <string name="description_hotel_6">On the NH1A national highway in north Jalandhar, this relaxed hotel lies 2.3 km from Jalandhar City train station and 9 km from Maha Kali Mandir temple.
With traditional wooden furnishings and tiled floors, the subdued rooms offer free Wi-Fi and flat-screen TVs, as well as tea and coffeemaking facilities. Some include minifridges, while suites add either extra bedrooms or separate living areas. Room service is available.</string>
    <string name="costCategory_hotel_6">Cheap</string>
    <string name="phone_hotel_6">0181 502 0444</string>
    <string name="stars_hotel_6">3-star hotel</string>
    <string name="price_hotel_6">Rs.1600</string>
    <string name="name_hotel_7">Hotel Sekhon Grand</string>
    <string name="address_hotel_7">G.T. Near G.P.O., Bhagat Namdev Chowk, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_7">This upscale hotel in a commercial or industrial area is 1 km from Lyallpur Khalsa College Halt Jalandhar train station</string>
    <string name="costCategory_hotel_7">Cheap</string>
    <string name="phone_hotel_7">0181 223 1350</string>
    <string name="stars_hotel_7">3-star hotel</string>
    <string name="price_hotel_7">Rs.1300</string>
    <string name="name_hotel_8">Hotel M1</string>
    <string name="address_hotel_8">No. 16, Police Lines Road, Jalandhar, Punjab 144001</string>
    <string name="description_hotel_8">On the NH1A national highway in north Jalandhar</string>
    <string name="costCategory_hotel_8">Cheap</string>
    <string name="phone_hotel_8">0181 500 0013</string>
    <string name="stars_hotel_8">1-star hotel</string>
    <string name="detailActivity_def_address_title">Address</string>
    <string name="detailActivity_def_description_title">Description</string>
    <string name="detailActivity_def_phone_title">Phone</string>
    <string name="detailActivity_def_misc_title">Misc</string>
</resources>