<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_hotels"
            android:icon="@drawable/ic_local_hotel_black_24dp"
            android:title="@string/hotels_TextView_MainActivity" />
        <item
            android:id="@+id/nav_restaurents"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/restaurents_TextView_MainActivity" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/events_TextView_MainActivity" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parks"
            android:icon="@drawable/ic_local_parking_black_24dp"
            android:title="@string/parks_TextView_MainActivity" />
        <item
            android:id="@+id/nav_religious_places"
            android:icon="@drawable/ic_people_outline_black_24dp"
            android:title="@string/religious_places_TextView_MainActivity" />
        <item
            android:id="@+id/nav_stadiums"
            android:icon="@drawable/ic_star_border_black_24dp"
            android:title="@string/stadiums_TextView_MainActivity" />
    </group>
</menu>