<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.riturajsingh.tourguideapp.DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/containerBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/detailsActivity_Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/headerTitleBackground"
            android:padding="8dp"
            android:text="@string/title_DetailsActivity"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/detail_img_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/ImageView_ContentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/img_hotel_best_western" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detailsActivity_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/detailActivity_Address_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/detailActivity_def_address_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailActivity_Desc_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/detailActivity_def_description_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailActivity_Phone_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/detailActivity_def_phone_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_misc1_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/detailActivity_def_misc_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_misc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_misc2_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimary"
                android:padding="4dp"
                android:text="@string/detailActivity_def_misc_title"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsActivity_misc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="4dp"
                android:text="@string/na_TextView_DetailsActivity"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>